// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container it mounts <Container /> 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

@media (min-width:34em) {
  .c0 {
    max-width: 34rem;
  }
}

@media (min-width:48em) {
  .c0 {
    max-width: 45rem;
  }
}

@media (min-width:62em) {
  .c0 {
    max-width: 60rem;
  }
}

@media (min-width:75em) {
  .c0 {
    max-width: 72.25rem;
  }
}

<Container
  className=""
  component="div"
  fluid={false}
  style={Object {}}
>
  <Container__ContainerStyle
    className=""
    component="div"
    fluid={false}
    style={Object {}}
  >
    <Component
      className="c0"
      component="div"
      fluid={false}
      style={Object {}}
    >
      <div
        className="c0"
        style={Object {}}
      />
    </Component>
  </Container__ContainerStyle>
</Container>
`;

exports[`Container it mounts <Container component="span" /> 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

@media (min-width:34em) {
  .c0 {
    max-width: 34rem;
  }
}

@media (min-width:48em) {
  .c0 {
    max-width: 45rem;
  }
}

@media (min-width:62em) {
  .c0 {
    max-width: 60rem;
  }
}

@media (min-width:75em) {
  .c0 {
    max-width: 72.25rem;
  }
}

<Container
  className=""
  component="span"
  fluid={false}
  style={Object {}}
>
  <Container__ContainerStyle
    className=""
    component="span"
    fluid={false}
    style={Object {}}
  >
    <Component
      className="c0"
      component="span"
      fluid={false}
      style={Object {}}
    >
      <span
        className="c0"
        style={Object {}}
      />
    </Component>
  </Container__ContainerStyle>
</Container>
`;

exports[`Container it mounts <Container fluid /> 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

<div
  className="rick-morty c0"
  style={
    Object {
      "color": "purple",
    }
  }
/>
`;

exports[`Container it overrides the default component as a component 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}

@media (min-width:34em) {
  .c0 {
    max-width: 34rem;
  }
}

@media (min-width:48em) {
  .c0 {
    max-width: 45rem;
  }
}

@media (min-width:62em) {
  .c0 {
    max-width: 60rem;
  }
}

@media (min-width:75em) {
  .c0 {
    max-width: 72.25rem;
  }
}

<Container
  className=""
  component={[Function]}
  fluid={false}
  style={Object {}}
>
  <Container__ContainerStyle
    className=""
    component={[Function]}
    fluid={false}
    style={Object {}}
  >
    <Component
      className="c0"
      component={[Function]}
      fluid={false}
      style={Object {}}
    >
      <Faux
        className="c0"
        style={Object {}}
      >
        <div />
      </Faux>
    </Component>
  </Container__ContainerStyle>
</Container>
`;
